import { Channel } from "src/chat_channel/entities/channel.entity";

export class Player {
	// id: string; //number;
	username: string;
	// oauth_id: int;
	// avatar_url: string;
	// two_factor_enabled: boolean;
	// password: string;
	// player_stats: PlayerStats;
	// owner_of: Channel[];
	// member_of: Channel[];
	// sent_messages: ChatMessage[];
	// matches_played: Match[];
	// blocked_players: BlockedPlayer[];
	// friends: Friend[];
	// channels: Channel[];
}