//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Player {
  id Int [pk, increment]
  username String [unique, not null]
  intra_username String [not null, default: 'username']
  avatar Bytes
  two_factor_enabled Boolean [not null, default: false]
  two_factor_code String
  player_stats PlayerStats
  owner_of Channel [not null]
  member_of ChannelMember [not null]
  sent_messages ChatMessage [not null]
  matches_played Match [not null]
  matches_con Match [not null]
  blocked_players BlockedPlayer [not null]
  blocked_by BlockedPlayer [not null]
  friends Friend [not null]
  friends_con Friend [not null]
}

Table PlayerStats {
  id Int [pk]
  wins Int [not null, default: 0]
  losses Int [not null, default: 0]
  ladder_level Int [not null, default: 1]
  achievements Json
  status PlayerStatus [not null]
  player Player [not null]
}

Table Channel {
  id Int [pk, increment]
  name String [not null]
  password String
  is_private Boolean [not null, default: false]
  is_dm Boolean [not null, default: false]
  owner_id Int [not null]
  owner Player [not null]
  messages ChatMessage [not null]
  members ChannelMember [not null]
}

Table ChannelMember {
  id Int [pk, increment]
  member_id Int [not null]
  member Player [not null]
  channel_id Int [not null]
  channel Channel [not null]
  is_admin Boolean [not null, default: false]
  is_muted Boolean [not null, default: false]
  is_banned Boolean [not null, default: false]
  added_at DateTime [not null]
  muted_at DateTime
}

Table ChatMessage {
  id Int [pk, increment]
  content String [not null]
  sender_id Int [not null]
  channel_id Int [not null]
  sent_at DateTime [not null]
  sender Player [not null]
  channel Channel [not null]
}

Table Match {
  id Int [pk, increment]
  player_id Int [not null]
  player Player [not null]
  opponent_id Int [not null]
  opponent Player [not null]
  player_points Int [not null, default: 0]
  opponent_points Int [not null, default: 0]
  timestamp DateTime [not null]
}

Table BlockedPlayer {
  id Int [pk, increment]
  player_id Int [not null]
  player Player [not null]
  blocked_id Int [not null]
  blocked Player [not null]
}

Table Friend {
  id Int [pk, increment]
  player_id Int [not null]
  player Player [not null]
  friend_id Int [not null]
  friend Player [not null]
}

Enum PlayerStatus {
  online
  offline
  in_game
}

Ref: PlayerStats.id - Player.id [delete: Cascade]

Ref: Channel.owner_id > Player.id

Ref: ChannelMember.member_id > Player.id

Ref: ChannelMember.channel_id > Channel.id [delete: Cascade]

Ref: ChatMessage.sender_id > Player.id

Ref: ChatMessage.channel_id > Channel.id [delete: Cascade]

Ref: Match.player_id > Player.id

Ref: Match.opponent_id > Player.id

Ref: BlockedPlayer.player_id > Player.id

Ref: BlockedPlayer.blocked_id > Player.id

Ref: Friend.player_id > Player.id

Ref: Friend.friend_id > Player.id